# FunctionalProgrammingLabs

./: .gitignore  README.md
lab1/: .env-example  Dockerfile  README.md  docker-compose.yaml  dumb.sql  lab1.cabal  stack.yaml
lab1/app/: Main.hs
lab1/src/: Competition.hs  Console.hs  CreateCommand.hs  DeleteCommand.hs  Lib.hs  ParseEnv.hs  Person.hs  Schedule.hs  Section.hs  ShowCommand.hs  UpdateCommand.hs
lab2/: README.md  lab2.cabal
lab2/app/: Main.hs
lab2/src/: Lib.hs
lab2/test/: Spec.hs
lab4/res/: text.txt
lab4/src/: main.lisp
