name:                lab2
version:             0.1.0.0
synopsis:            FP course lab2
homepage:            https://github.com/acterics/FunctionalProgrammingLabs/blob/lab2/lab2/README.md
license:             BSD3
license-file:        LICENSE
author:              Oleg Lipskiy
maintainer:          lolego1601@gmail.com
copyright:           2017 Oleg Lipskiy
category:            Study
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/acterics/FunctionalProgrammingLabs/blob/lab2/lab2/README.md>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lab2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lab2
  default-language:    Haskell2010

test-suite lab2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lab2
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/acterics/FunctionalProgrammingLabs/tree/lab2